@@ -3,6 +3,12 @@ irc.port=6667
 # use SSL for irc.server
 # [ true | false ]
 irc.ssl=false
+
+# use blowfish
+# [ true | false ]
+irc.blowfish=false
+irc.blowkey=drftpd
+
 # channels to autojoin on successful connection
 # to irc.server
 irc.channel.1=#drftpd-test
